<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/nav_home"/>
    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings_icon"
                android:title="@string/nav_settings"/>

            <item
                android:id="@+id/nav_import_export"
                android:icon="@drawable/download_icon"
                android:title="@string/nav_import_export"/>

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about_icon"
                android:title="@string/nav_about"/>
        </menu>
    </item>

</menu>