<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/nav_home"/>

        <item
            android:id="@+id/nav_passwords"
            android:icon="@drawable/password_note_icon"
            android:title="@string/nav_password_notes"/>

<!--        <item-->
<!--            android:id="@+id/nav_add_password"-->
<!--            android:icon="@drawable/add_password_icon"-->
<!--            android:title="@string/nav_add_password"/>-->

        <item
            android:id="@+id/nav_password_generator"
            android:icon="@drawable/generate_password_icon"
            android:title="@string/nav_password_generator"/>

<!--        <item-->
<!--            android:id="@+id/nav_add_folder"-->
<!--            android:icon="@drawable/folder_icon"-->
<!--            android:title="@string/nav_add_folder"/>-->

    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_notes"
                android:icon="@drawable/notes_icon"
                android:title="@string/nav_notes"/>
<!--            <item-->
<!--                android:id="@+id/nav_edit_notes"-->
<!--                android:icon="@drawable/edit_note_icon"-->
<!--                android:title="@string/nav_edit_notes"/>-->
        </menu>
    </item>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings_icon"
                android:title="@string/nav_settings"/>

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about_icon"
                android:title="@string/nav_about"/>
        </menu>
    </item>

</menu>