<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".GeneratePasswordActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="14dp"
            android:src="@drawable/back_btn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/generate_password_screen_label"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <!-- Generated result -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:padding="15dp"
            android:background="@drawable/round_back_white_10_20">

        </LinearLayout>

            <!-- Password Options -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:padding="15dp"
                android:background="@drawable/round_back_white_10_20">

                <!-- Password options label -->
                <TextView
                    android:id="@+id/password_contains_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/password_contains_label"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"/>

                <!-- Caps Letters checkbox-->
                <CheckBox
                    android:id="@+id/caps_letters_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/caps_letters_label"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"/>

                <!-- Downcase Letters checkbox-->
                <CheckBox
                    android:id="@+id/down_letters_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/down_letters_label"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"/>

                <!-- All Letters checkbox-->
                <CheckBox
                    android:id="@+id/all_letters_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all_letters_label"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"/>

                <!-- Numbers checkbox-->
                <CheckBox
                    android:id="@+id/numbers_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/numbers_label"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"/>

                <!-- Special symbols checkbox-->
                <CheckBox
                    android:id="@+id/special_symbols_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/special_symbols_label"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"
                    android:checked="true" />


            </LinearLayout>

            <!-- Password Options -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="15dp"
                android:background="@drawable/round_back_white_10_20">

                <!-- Password length label -->
                <TextView
                    android:id="@+id/password_length_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/password_length_label"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"/>

                <!--https://metanit.com/java/android/4.7.php-->
                <SeekBar
                    android:id="@+id/password_length_seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progress="14"
                    android:max="25"/>

                <TextView
                    android:id="@+id/password_length_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="10dp"
                    android:text="14"

                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:padding="15dp"
                android:background="@drawable/round_back_white_10_20">

                <!-- Generate password button -->
                <Button
                    android:id="@+id/generate_password_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/generate_btn"
                    android:textColor="@color/settings_notifications"
                    android:textStyle="normal"
                    android:textSize="14sp"
                    android:background="@drawable/update_password_btn"
                    android:textAllCaps="false"/>

                <!-- Ok button -->
                <Button
                    android:id="@+id/save_password_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ok_btn"
                    android:textColor="@color/settings_languages"
                    android:textStyle="normal"
                    android:textSize="14sp"
                    android:background="@drawable/save_password_btn"
                    android:textAllCaps="false"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>