<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".SettingsSecurityActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="14dp"
            android:src="@drawable/back_btn"
            android:onClick="goToSettingsActivity"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_screen_label"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </RelativeLayout>

    <!-- Security -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@drawable/round_back_white_10_20">

        <!-- Security radios -->
        <RadioGroup
            android:id="@+id/radios_security_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- finger print radio-->
            <RadioButton
                android:id="@+id/fingerprint_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:text="@string/fingerprint_label" />

            <!-- pin radio-->
            <RadioButton
                android:id="@+id/pin_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:text="@string/pin_label" />

            <!-- nothing radio-->
            <RadioButton
                android:id="@+id/nothing_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:checked="true"
                android:text="@string/nothing_label" />

        </RadioGroup>

    </LinearLayout>

</LinearLayout>