<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.activities.LoginActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="14dp"
            android:text="@string/login_label"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Login fields -->
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_back_white_10_20"
            android:orientation="vertical"
            android:padding="15dp">

            <!-- master key field -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/PasswordCustomOutlineBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_masterkey_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/enter_masterkey_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="#FFFFFF"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>


            </RelativeLayout>

                <!-- forget master key -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/forget_password_label"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="normal" />
                </RelativeLayout>

            <!-- login button -->
            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/update_password_btn"
                android:text="@string/login_btn"
                android:textAllCaps="false"
                android:textColor="@color/settings_notifications"
                android:textSize="14sp"
                android:textStyle="normal" />

                <!-- create account button -->
                <Button
                    android:id="@+id/create_account_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/save_password_btn"
                    android:text="@string/create_masterkey_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/settings_languages"
                    android:textSize="14sp"
                    android:textStyle="normal" />



        </LinearLayout>


        </LinearLayout>



    </ScrollView>

</LinearLayout>